1.0.8 (?/??/2021):
------------------

- Fixed double byte swap operation on writes of partition label data on
  big-endian systems; this is in addition to the double byte swap fix on
  reading partition label data fixed in 1.0.7. (Thanks to Erik Larsson for
  both fixes.)

1.0.7 (3/10/2021):
------------------

- Fixed bug that caused spurious warnings about the partition table
  header claiming an invalid size of partition entries when reading
  some MBR disks.

- Added ARM64 as an architecture for the Mac builds of gdisk and fixparts.
  The official GPT fdisk binaries of these files for macOS are now
  "universal" x86-64/ARM64 binaries, so they will run natively on the new M1
  (ARM64) Macs. The sgdisk and cgdisk binaries, though, remain built only
  for x86-64, because they rely on libraries that are not easily built in
  "universal" form.

- Fixed double byte swap operation on partition label data on big-endian
  CPUs. This resulted in partition names becoming gibberish on such CPUs.

- Added three new type codes:
  - 0x0701 - Microsoft Storage Replica
  - 0x0702 - ArcaOS Type 1
  - 0x8401 - Storage Performance Development Kit (SPDK) block device

1.0.6 (1/13/2021):
------------------

- Fixed bug that could cause segfault if GPT header claimed partition
  entries are oversized. See:
  https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-0256

- Fixed bug that could cause a crash if a badly-formatted MBR disk was
  read. See:
  https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-0308

- Renamed the partition type "Freedesktop $BOOT" to "XBOOTLDR partition".

- Added several more Freedesktop partition table type codes (0x8312 through
  0x831C).

- Fixed type code definition in diskio-unix.cc that prevented 32-bit builds
  from correctly handling disks over 4 TiB in size.

- Minor tweaks to get the software to compile on FreeBSD; that seems to have
  fallen into disrepair.

1.0.5 (2/17/2020):
------------------
